--- a/BK/BKHouse.html
+++ b/BK/BKHouse.html
@@ -66,8 +66,10 @@
 			material.pointColorType = Potree.PointColorType.RGB; // any Potree.PointColorType.XXXX 
 			material.size = 1;
 			material.pointSizeType = Potree.PointSizeType.ADAPTIVE;
-			material.shape = Potree.PointShape.SQUARE;
+			material.shape = Potree.PointShape.CIRCLE;
 			viewer.fitToScreen();
+			viewer.setEDLEnabled(true);
+			viewer.setMinNodeSize(140);
 		});
 		
 	</script>
