--- a/JasengEntrance/JasengEntrance.html
+++ b/JasengEntrance/JasengEntrance.html
@@ -68,6 +68,8 @@
 			material.pointSizeType = Potree.PointSizeType.ADAPTIVE;
 			material.shape = Potree.PointShape.SQUARE;
 			viewer.fitToScreen();
+			viewer.setEDLEnabled(true);
+			viewer.setMinNodeSize(140);
 		});
 		
 	</script>
