--- a/threetest.html
+++ b/threetest.html
@@ -7,7 +7,7 @@
     <style>
 			body {
 				font-family: Monospace;
-				background-color: #f0f0f0;
+				background-color: transparent;
 				margin: 0px;
 				overflow: hidden;
 			}
