--- a/threetest.html
+++ b/threetest.html
@@ -36,7 +36,7 @@
 				info.innerHTML = 'Simple procedurally-generated shapes<br/>Drag to spin';
 				container.appendChild( info );
 				scene = new THREE.Scene();
-				scene.background = new THREE.Color( 0xf0f0f0 );
+				//scene.background = new THREE.Color( 0xf0f0f0 );
 				camera = new THREE.PerspectiveCamera( 50, window.innerWidth / window.innerHeight, 1, 1000 );
 				camera.position.set( 0, 150, 500 );
 				scene.add( camera );
